objects/Order_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>AX_Login__c</fullName>
        <label>AX Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_l_FOR_Login__c</fullName>
        <label>Add&apos;l FOR Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_l_Sales_Login__c</fullName>
        <label>Add&apos;l Sales Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_to_Exhibit_defining_core__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If included, signed by the customer &amp; R&amp;D</inlineHelpText>
        <label>Addendum to Exhibit defining core</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Summary__c</fullName>
        <label>Amendment Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amendment__c</fullName>
        <inlineHelpText>from amendment document</inlineHelpText>
        <label>Amendment #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPR_ActualTransactionType__c</fullName>
        <formula>IF(
 OR(
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-99-Yr&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-Bronze&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-eDAgold&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-eDAplat&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-FTA&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-FTA Add-on&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-IP&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-Ren Maint&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-SAM&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-SUB&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-SUB Add-on&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-TBL&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-UNIV&apos;),
  ISPICKVAL(Booking_Package_Provisional_Request__r.Actual_Transaction_Type__c, &apos;VAR-VIP&apos;)
 ),
 &apos;VAR&apos;,
 &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPR_ActualTransactionType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <description>This will be the address where the invoice should be emailed to.</description>
        <label>Bill To Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Account.Bill_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Checklists (Bill To)</relationshipLabel>
        <relationshipName>Order_Checklists_BillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Package_Provisional_Request__c</fullName>
        <label>Booking Package / Provisional Request</label>
        <referenceTo>Booking_Package__c</referenceTo>
        <relationshipLabel>Order Checklists</relationshipLabel>
        <relationshipName>Order_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Checklist_Notes_Comments__c</fullName>
        <label>Checklist Notes/Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comp_Code__c</fullName>
        <label>Comp Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ip_Access_Selection_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>signed by the customer</inlineHelpText>
        <label>Customer Ip Access Selection Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field created for HW page layout</description>
        <inlineHelpText>For HW Orders a discount approval form is required.</inlineHelpText>
        <label>Discount Approval Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opportunity approval in SFDC</inlineHelpText>
        <label>Discount Approval confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_the_contract_have_e_pool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does the contract have e-pool?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drawdown_Value__c</fullName>
        <inlineHelpText>From selection form</inlineHelpText>
        <label>Drawdown Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Export_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required for all transaction types</inlineHelpText>
        <label>Export Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FOR_Login__c</fullName>
        <label>FOR Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTA_with_Ramps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FTA with Ramps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flexible_Configuration_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Product Quote</inlineHelpText>
        <label>Flexible Configuration Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Type__c</fullName>
        <formula>TEXT(Booking_Package_Provisional_Request__r.Flow_Type__c)</formula>
        <label>Flow Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hostid__c</fullName>
        <label>Hostid</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_At__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install At</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Account.Ship_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Checklists (Install At)</relationshipLabel>
        <relationshipName>Order_Checklists_InstallAt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_hardware_onsite_already__c</fullName>
        <label>Is hardware onsite already?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_HQW_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The HQW should be posted in content SF APP/SQW section</inlineHelpText>
        <label>Is the HQW posted in SFDC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lockdown_number_of_days__c</fullName>
        <inlineHelpText>listed on addednum A</inlineHelpText>
        <label>Lockdown number of days</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sales approval Tab in SQW</inlineHelpText>
        <label>OM Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Rep__c</fullName>
        <label>OM Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Transaction_Type__c</fullName>
        <label>Original Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>99-YR/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEND-serv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW-99Yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW-Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW-Ren Maint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAgold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAplat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA-Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP - Tensilica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Access Selection/DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan with fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ren Maint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM-Ren Maint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUB Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-99-Yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-eDAgold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-eDAplat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-FTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-FTA Add-on</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_defined_configuration_identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>configuration identified in an addendum</inlineHelpText>
        <label>Pre-defined configuration identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q_1_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q+1 Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quickcycles_Agreements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only for HW-Lease</inlineHelpText>
        <label>Quickcycles Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Initialed or signed by the customer</inlineHelpText>
        <label>Product Quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rec_Risk_Rating__c</fullName>
        <formula>TEXT(Booking_Package_Provisional_Request__r.Rec_Risk_Rating__c)</formula>
        <label>Rec Risk Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Approval_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Approval Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Account.Ship_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Checklists</relationshipLabel>
        <relationshipName>Order_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Signed by Customer. Not required for add-ons</inlineHelpText>
        <label>Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WW_Geography_Install_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Geo Install form can be found on SIS or SQW</inlineHelpText>
        <label>WW Geography Install Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Witholding_tax__c</fullName>
        <label>Witholding tax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_Tab_1_General_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SQW Tab 1</inlineHelpText>
        <label>General Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workbook_Tab_6_Addendum_A_initaled_by__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>initialed by customer</inlineHelpText>
        <label>Addendum A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workbook_Tab_6a_Addendum_B_required_fo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Net contracts only, initialed by customer</inlineHelpText>
        <label>Addendum B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>add_on_type__c</fullName>
        <inlineHelpText>Purchase Orders are required for Add-ons</inlineHelpText>
        <label>Add-On Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uplift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Order Checklist</label>
    <nameField>
        <displayFormat>OCL-{0000}</displayFormat>
        <label>Order Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Checklists</pluralLabel>
    <recordTypes>
        <fullName>Amend</fullName>
        <active>true</active>
        <description>Applicable for Amend, Amend-Serv</description>
        <label>Amend</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edagold_and_Edaplat</fullName>
        <active>true</active>
        <description>Applicable for edagold, edaplat,VAR-bronze, VAR-edagold, VAR-edaplat</description>
        <label>Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hardware</fullName>
        <active>true</active>
        <description>Applicable for HW-99yr, HW-lease, HW-RM</description>
        <label>Hardware</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP</fullName>
        <active>true</active>
        <description>Applicable for IP, VIP, IP/VIP, VAR-VIP</description>
        <label>IP/VIP</label>
    </recordTypes>
    <recordTypes>
        <fullName>IP_Access</fullName>
        <active>true</active>
        <label>IP Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>TBL_UNIV_SAM_loan_with_fees</fullName>
        <active>true</active>
        <description>Applicable for TBL,UNIV, SAM, Loan w/fees, VAR-TBL, VAR-UNIV, VAR-SAM</description>
        <label>TBL/UNIV/SAM/loan with fees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Term</fullName>
        <active>true</active>
        <description>FTA, FTA add-on, SUB, SUB add-on, VAR-FTA, VAR-FTA add-on, VAR-SUB, VAR-SUB add-on</description>
        <label>Term</label>
    </recordTypes>
    <recordTypes>
        <fullName>X99_Yr_Other</fullName>
        <active>true</active>
        <description>Applicable for 99yr, Other, RM, VAR-99yr, VAR-RM</description>
        <label>99-Yr/Other</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>